--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Machine Learning"
-    url: /machine-learning/
+  # - title: "Machine Learning"
+  #   url: /machine-learning/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
